opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "Apache-2.0"
synopsis: "Simple wrapper over ocaml-mysql"
description: "Making MySQL slightly type safer some of the time"
homepage: "https://github.com/hcarty/ezmysql"
dev-repo: "git+https://github.com/hcarty/ezmysql.git"
bug-reports: "https://github.com/hcarty/ezmysql"
depends: [
  "astring"
  "calendar"
  "dune" {>= "1.0.0"}
  "fmt" {>= "0.8.5"}
  "mysql"
  "ocaml" {>= "4.03.0"}
  "ocamlgraph"
  "rresult"
  "uri"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
